# cointegration-analysis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  backtest.py  backtest_new.py  backtests.py  coint_tests.py  cointegration_tests.py  comprehensive_backtest.py  data_download.py  main.py  notebook.ipynb  pair_selection_summary.py  plotting.py  pyproject.toml  pytest.ini  requirements.txt  silence_fd_output.py  threshold_optimization.py
.github/workflows/: ci.yml
.venv_tmp/: pyvenv.cfg
data/: README.md  agri_pair_data.csv  currency_pair_data.csv  eu_index_pair_1_data.csv  eu_index_pair_2_data.csv  fast_fashion_pair_data.csv  fr_banking_pair_data.csv  german_auto_triple_data.csv  investor_ab_pair_data.csv  oil_pair_data.csv  precious_metals_triple_data.csv  sector_etf_pair_data.csv  semiconductor_pair_data.csv  sp500_2020-08-10_2025-08-08.csv  sp500_2020-08-10_2025-08-08.csv:Zone.Identifier  sp500_data.csv  volatility_pair_data.csv  vw_porsche_pair_data.csv  yield_pair_data.csv
notebooks/: analysis.ipynb
results/threshold_analysis/: selected_pairs_summary.csv
src/cointegration_analysis/: __init__.py  cli.py
src/cointegration_analysis/analytics/: __init__.py  backtesting.py  cointegration.py  optimization.py  plotting.py  reporting.py  robustness.py  signals.py
src/cointegration_analysis/data/: __init__.py  download.py
src/cointegration_analysis/utils/: __init__.py  silence_fd_output.py
tests/: conftest.py  test_backtests.py  test_backtests_position_fill.py  test_cointegration_tests.py  test_integration.py  test_main.py  test_plotting.py  test_threshold_optimization.py
