[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pairs-cointegration-backtester"
version = "0.1.0"
description = "Pairs trading backtester using Engle–Granger, ECM, Johansen, ZA, and systematic CV."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Gustav Lantz" }]
dependencies = [
    "numpy",
    "pandas", 
    "scipy",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "yfinance",
    "scikit-learn",
    "plotly",
]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = """
(
    ^notebooks/
    | \\.ipynb$
)
"""

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "**/*.ipynb",
    "notebooks/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "F401", "F841", "B905", "B007", "I001", "UP038"]
"plotting.py" = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
